# example-clion-msys2-gtk4

./: .gitignore  CMakeLists.txt  README.md  main.cpp
